[project]
name = ""
version = "0.1.0"
requires-python = ">=3.9"
description = ""
authors = [
    {name = "", email = ""}
]
readme = ""
dependencies = [
    ""
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "build"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
